<!--
  ~ Made by Bartosz Lewandowski
  ~ Copyright (c) Lodz, Poland 2019.
  -->

<resources>
    <string name="app_name">AC-TwitterClone</string>

    // activity_sign_up
    <string name="hint_email">Enter email</string>
    <string name="hint_username">Enter username</string>
    <string name="btn_go_to_log_in">Go to log in</string>
    <string name="btn_sign_up">Sign up</string>

    // activity_log_in
    <string name="hint_email_or_username">Enter email or username</string>
    <string name="hint_password">Enter password</string>
    <string name="btn_log_in">Log in</string>
    // same for activity_sign_up
    <string name="btn_go_to_sign_up">Go to sign up</string>


    // my_menu
    <string name="menu_logout_title">Logout</string>
    <string name="menu_send_title">Send</string>

    // activity_send_tweet
    <string name="hint_send_tweet">Enter your tweet here</string>
    <string name="btn_send_tweet">Send Tweet</string>
    <string name="btn_other_users_tweets">View other users tweets</string>
</resources>
